	* src/libYARP_OS/src/RunProcManager.cpp
	* src/libYARP_OS/src/RunReadWrite.cpp
	Removed ACE include dependencies.

2012-08-23  Daniele E. Domenichelli <daniele.domenichelli@iit.it>
	* extern/CMakeLists.txt: Add conditionals for extern
	  directories [thanks Paul Fitzpatrick]
	* extern/gtkdatabox/CMakeLists.txt: Suppress
	  "unused-but-set-variable" warnings for gtkdatabox.

2012-08-22  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/idls/thrift/src/t_yarp_generator.cc: fix serialization
	of void functions, regular or oneway [thanks Elena Ceseracciu]

2012-08-22  Daniele E. Domenichelli <daniele.domenichelli@iit.it>
	* src/carriers/priority_carrier/PriorityCarrier.h
	  src/yarpmanager/libymanager/include/broker.h
	  src/yarpmanager/libymanager/include/execstate.h: Add virtual
	  destructors to shut up warnings on Debian 4

2012-08-17  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_OS/harness/ValueTest.cpp: fix checkReadWrite
	test to use floating point values [thanks Ugo Pattacini]

2012-08-08  Daniele E. Domenichelli <daniele.domenichelli@iit.it>
	* src/libYARP_math/CMakeLists.txt: Do not link to both ATLAS
	  and GSL blas libraries

2012-08-06  Daniele E. Domenichelli <daniele.domenichelli@iit.it>
	* src/yarpscope/src/Graph.cpp,
	  src/yarpscope/src/PortReader.cpp: Fix modulo operator for
	  negative values. This should fix the random spikes that
	  sometimes appear in the plot.
	* src/yarpscope/src/Debug.h: Handle debug for long long types.
	* src/yarpscope/src/PortReader.cpp: Remove annoying debug.
	* src/yarpscope/src/PortReader.cpp: Increment acquired data even
	  if using previous one. This could fix the plot moving in time.
	* src/yarpscope/src/MainWindow.cpp: Remove old unused stuff.
	  This fixes the SIGSEGV at exit on windows.
	* src/yarpscope/examples/test_yarpscope_wbd.xml: Add test for
	  wholeBodyDynamics [thanks Marco Randazzo]

2012-06-20  Marco Randazzo  <marco.randazzo@iit.it>
    *  src/libYARP_sig/src/Matrix.cpp