@@ -30,7 +30,10 @@ if (NOT SKIP_bayer_carrier)
   include_directories(${YARP_INCLUDE_DIRS})
   add_library(bayer_carrier BayerCarrier.h BayerCarrier.cpp ${DC1394_SRC})
   if (MSVC AND DC1394_SRC)
-    set_property(SOURCE ${DC1394_SRC} PROPERTY LANGUAGE CXX)
+    set_source_file_properties(${DC1394_SRC} PROPERTY LANGUAGE CXX)
+  endif ()
+  if (UNIX AND DC1394_SRC)
+    set_source_files_properties(${DC1394_SRC} PROPERTIES COMPILE_FLAGS -Wno-sign-compare)
   endif ()
   target_link_libraries(bayer_carrier ${YARP_LIBRARIES})
   if (USE_LIBDC1394)
