@@ -12,6 +12,10 @@
 	  directories [thanks Paul Fitzpatrick]
 	* extern/gtkdatabox/CMakeLists.txt: Suppress
 	  "unused-but-set-variable" warnings for gtkdatabox.
+	* src/libYARP_OS/src/Protocol.cpp,
+	  src/carriers/bayer_carrier/CMakeLists.txt,
+	  src/yarpmanager/libymanager/include/ymm-types.h: Fix build
+	  with YARP_EXTRA_WARNINGS enabled
 
 2012-08-22  Paul Fitzpatrick  <paul@robotrebuilt.com>
 
